--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Stadepladser</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgkF2ja4j14RMTnkZZXXdQ42xUIv2-bCo&libraries=places"></script>
 </head>
-<body>
+
+<body class="bg-green-400">
   <app-root></app-root>
 </body>
+
 </html>
